[workspace]
resolver = "2"
members = [
    "src",
    "tools",
    "python",
]

[workspace.package]
description = "Virtualization linting library"
version = "0.0.1"
authors = ["Michal Prívozník <mprivozn@redhat.com>"]
license = "LGPL-3.0-or-later"
edition = "2021"
repository = "https://gitlab.com/MichalPrivoznik/virt-lint"
readme = "README.md"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
