[package]
name = "virt_lint_python"
description.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
path = "virt-lint.rs"
crate-type = ["cdylib"]

[dependencies]
virt-lint = { path = "../src" }
virt = "0.4.1"
pyo3 = "0.22.3"
