[package]
name = "virt-lint"
description.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
path = "virt-lint.rs"

[features]
capi = []

[dependencies]
enum-display-derive = "0.1.1"
pkg-version = "1.0.0"
libxml = "0.3.3"
thiserror = "1.0.48"
virt = "0.4.1"
mlua = { version="0.9.1", features=["lua54"] }
