[package]
name = "virt-lint-cli"
description.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "virt-lint"
path = "virt-lint.rs"
doc = false

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
virt={ git="https://gitlab.com/libvirt/libvirt-rust.git", rev="c7ee11c7585897f343d1c5ca9adc344bd9d21007" }
virt-lint = { path = "../src" }
