[package]
name = "virt-lint-cli"
description.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "virt-lint"
path = "virt-lint.rs"
doc = false

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
virt = { git="https://gitlab.com/libvirt/libvirt-rust.git", rev="b0506ed9cca960dd5f7679bca434a19d4b5cfc1d" }
virt-lint = { path = "../src" }
