[package]
name = "virt-lint-cli"
description.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true

[[bin]]
name = "virt-lint"
path = "virt-lint.rs"
doc = false

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
virt = "0.4.1"
virt-lint = { path = "../src" }
